fix: unit problem & added airport key & redirect to swagger
