# cmd/service/docs/swagger.json
@@ -21,6 +21,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "measurements"
+                ],
                 "summary": "Get measurements in a specific time interval",
                 "operationId": "measurement-interval",
                 "parameters": [
@@ -42,6 +45,13 @@
                         "type": "string",
                         "description": "End date in the format -Hh",
                         "name": "end",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Airport code",
+                        "name": "airport",
                         "in": "query",
                         "required": true
                     }
@@ -66,6 +76,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "measurements"
+                ],
                 "summary": "Get average measurement in a day",
                 "operationId": "avg-measurement-in-a-day",
                 "parameters": [
@@ -78,9 +91,16 @@
                     },
                     {
                         "type": "string",
-                        "description": "Comma-separated list of measurement types (e.g., temperature,humidity,pressure,windSpeed)",
+                        "description": "Comma-separated list of measurement types (e.g., temperature, humidity, ...)",
                         "name": "types",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Airport code",
+                        "name": "airport",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
