# cmd/service/main.go
@@ -30,46 +30,34 @@ import (
 )
 
 var client = influxdb2.NewClient("http://localhost:8086",
-	"upvBeRD7IGz2JkRYkF16F4PK7g-uciplnKnwMnLnFqk_5AAoT-dcUz_fWoeL0f6iy3enhBS-N0tLhwfZ0ILZiA==")
-var newURL = "http://localhost:8082/api/v1/measurements"
+	"I3dxjjSmzB473hETBChroRnzjEioLgKlyDuSxxc_ve2RBwdkb7uoCT6kROVbB-2kI4u3hp5clG7fj04YJ5yp1Q==")
 
-func RedirectHomeHandler(w http.ResponseWriter, r *http.Request) {
-	http.Redirect(w, r, newURL, http.StatusSeeOther)
-}
-
-func HomeHandler(writer http.ResponseWriter, _ *http.Request) {
-	jsonData, err := json.Marshal(map[string]interface{}{
-		"message": "Hello welcome to our API",
-	},
-	)
-
-	handleErr(err)
-
-	setResponseHeaders(writer)
-	_, err = writer.Write(jsonData)
-
-	handleErr(err)
+func RedirectSwaggerHandler(w http.ResponseWriter, r *http.Request) {
+	http.Redirect(w, r, "/swagger/index.html", http.StatusSeeOther)
 }
 
 // MeasurementIntervalHandler gets measurements in a specified interval.
 // @Summary Get measurements in a specific time interval
 // @Description Get measurements for a specified type within a time range.
+// @Tags measurements
 // @ID measurement-interval
 // @Accept json
 // @Produce json
 // @Param type path string true "Measurement type"
 // @Param start query string true "Start date in the format -Hh"
 // @Param end query string true "End date in the format -Hh"
+// @Param airport query string true "Airport code"
 // @Success 200 {object} map[string]interface{}
 // @Router /interval/{type}/ [get]
 func MeasurementIntervalHandler(w http.ResponseWriter, r *http.Request) {
 	id := mux.Vars(r)["type"]
 	start := r.URL.Query().Get("start")
 	end := r.URL.Query().Get("end")
+	airport := r.URL.Query().Get("airport")
 
 	fluxQuery := fmt.Sprintf(`from(bucket: "metrics")
 	|> range(start: %s , stop: %s)
-	|> filter(fn: (r) => r._measurement == "%s" )`, start, end, id)
+	|> filter(fn: (r) => r._measurement == "%s" and r.airport == "%s")`, start, end, id, airport)
 
 	result, err := client.QueryAPI("meteo-airport").Query(context.Background(), fluxQuery)
 	handleErr(err)
@@ -78,15 +66,17 @@ func MeasurementIntervalHandler(w http.ResponseWriter, r *http.Request) {
 
 	for result.Next() {
 		data = append(data, map[string]interface{}{"value": result.Record().Value(),
-			"time": result.Record().Time().String(),
-			"unit": result.Record().Field()})
+			"time":   result.Record().Time().String(),
+			"unit":   result.Record().ValueByKey("unit"),
+			"sensor": result.Record().ValueByKey("sensor")})
 	}
 
 	jsonData, err := json.Marshal(map[string]interface{}{
-		"type":  id,
-		"start": start,
-		"end":   end,
-		"data":  data,
+		"airport": airport,
+		"type":    id,
+		"start":   start,
+		"end":     end,
+		"data":    data,
 	})
 	handleErr(err)
 
@@ -99,18 +89,20 @@ func MeasurementIntervalHandler(w http.ResponseWriter, r *http.Request) {
 // AvgMeasurementInADayHandler gets the average measurement for specified types on a given date.
 // @Summary Get average measurement in a day
 // @Description Get the average measurement for specified types on a given date
+// @Tags measurements
 // @ID avg-measurement-in-a-day
 // @Accept json
 // @Produce json
 // @Param date query string true "Date in the format YYYY-MM-DD"
-// @Param types query string false "Comma-separated list of measurement types
-// (e.g., temperature,humidity,pressure,windSpeed)"
+// @Param types query string false "Comma-separated list of measurement types (e.g., temperature, humidity, ...)"
+// @Param airport query string true "Airport code"
 // @Success 200 {object} map[string]interface{}
 // @Router /mean/ [get]
 func AvgMeasurementInADayHandler(writer http.ResponseWriter, r *http.Request) {
 	var types []string
 
 	t := r.URL.Query().Get("types")
+	airport := r.URL.Query().Get("airport")
 
 	if t == "" {
 		types = []string{"temperature", "humidity", "pressure", "windSpeed"}
@@ -132,19 +124,20 @@ func AvgMeasurementInADayHandler(writer http.ResponseWriter, r *http.Request) {
 	fluxQuery := fmt.Sprintf(`from(bucket: "metrics")
 	|> range(start: %s, stop: %s)
 	|> filter(fn: (r) => %s)
-	|> filter(fn: (r) => r["_field"] == "value")
+	|> filter(fn: (r) => r.airport == "%s")
 	|> aggregateWindow(every: 24h, fn: mean, createEmpty: false)
 	|> group(columns: ["_measurement"])
 	|> yield(name: "mean")
-	`, date, date+"T23:59:59Z", strings.Join(typeF, " or "))
+	`, date, date+"T23:59:59Z", strings.Join(typeF, " or "), airport)
 
 	result, err := client.QueryAPI("meteo-airport").Query(context.Background(), fluxQuery)
 	handleErr(err)
 
 	data := processData(*result)
 	jsonData, err := json.Marshal(map[string]interface{}{
-		"date": date,
-		"data": data,
+		"airport": airport,
+		"date":    date,
+		"data":    data,
 	})
 
 	handleErr(err)
@@ -185,7 +178,7 @@ func processData(result api.QueryTableResult) []map[string]interface{} {
 		data = append(data, map[string]interface{}{
 			"type":  measurementType,
 			"value": result.Record().Value(),
-			"unit":  result.Record().Field(),
+			"unit":  result.Record().ValueByKey("unit"),
 		})
 	}
 
@@ -196,10 +189,7 @@ func main() {
 	router := mux.NewRouter()
 
 	log.Info("Connected to the server on port 8082 !")
-	router.HandleFunc("/", RedirectHomeHandler)
-	router.HandleFunc("/api", RedirectHomeHandler)
-	router.HandleFunc("/api/v1", RedirectHomeHandler)
-	router.HandleFunc("/api/v1/measurements", HomeHandler).Methods("GET")
+	router.HandleFunc("/", RedirectSwaggerHandler)
 	router.HandleFunc("/api/v1/measurements/interval/{type}/", MeasurementIntervalHandler).Methods("GET")
 	router.HandleFunc("/api/v1/measurements/mean/", AvgMeasurementInADayHandler).Methods("GET")
 
